<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xplor</string>
    <string name="action_settings">Settings</string>
    <string name="hello"></string>

    <!-- facebook project id and secrate key  of test server -->
    <string name="Facebook_App_Id">1590138637866851</string> 
    <!-- <string name="Facebook_App_Secret">4fe5882f18afdfc2592ecf0e4121f33c</string> -->
    <!-- using link http://web.myxplor.com/ facebook share -->
    <string name="Facebook_Account_link">http://web.myxplor.com/</string> 
    <!-- test Gcm app google register project id xplor-88213 pNo 484102270937 -->
    <string name="app_gcm_project_id">484102270937</string> 

    <!-- Production server of facebook project id: 365541406976823 -->
    <!-- <string name="Facebook_App_Id">365541406976823</string> -->
    <!-- using link http://web.myxplor.com/ facebook share -->
    <!--  <string name="Facebook_Account_link">http://web.myxplor.com/</string>  -->
    <!-- Production Gcm app google register project id xplor-93009 pNo 59040412293 -->
    <!--  <string name="app_gcm_project_id">59040412293</string>  -->
    
    <string name="str_Device_Token">XplorDeviceToken</string>
    <string name="Str_WebService">WebService Screen</string>
    <string name="Str_Image">Image Screen</string>
    <string name="txt_select_child">Select Child</string>
    <string name="txt_Settings">Settings</string>
    <string name="txt_Reset_Password">Reset Password</string>
    <string name="txt_Submit">Submit</string>
    <string name="txt_child_attendance">Child Attendance</string>
    <string name="txt_login">Login</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Password">Password</string>
    <string name="txt_Remember_Email">Remember Email ?</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_invite_caps">INVITE</string>
    <string name="txt_invite">Invite</string>
    <string name="txt_comment">Comments</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_Save">Save</string>
    <string name="txt_Cancel">Cancel</string>
    <string name="txt_Done">Done</string>
    <string name="txt_Select_all">Select All</string>
    <string name="txt_child_checkedin">No child checked in</string>
    <string name="txt_relationship">Relationship</string>
    <string name="txt_Challenge_Budges">Challenges &amp; Badges</string>
    <string name="txt_medication">Medication</string>
    <string name="txt_medical_caps">MEDICAL EVENT</string>
    <string name="str_NoRecordFound">No record found.</string>
    <string name="str_No_Child_Reg">No child registered.</string>
    
    <string name="str_like_educator_parent">Would you like to login as Educator or Xplorer?</string>

    <!-- validation string text -->
    <string name="no_internet">Internet is not available.</string>
    <string name="connection_time_out">Your connection timedout.</string>
    
    <string name="txt_what_next">\'What\'s Next?\'</string>
    
    <string name="no_child_available">No child is available for tagging.</string>
    <string name="no_child_present">No child is present in this room.</string>
   
    <string name="txt_post_sms">Please add content to your post.</string>
    <string name="service_error">Error service response.</string>
    <string name="email_enter">Please enter your email.</string>
    <string name="email_valid">Please be sure to enter a valid email address.</string>
    <string name="password_enter">Please enter your password.</string>
    <string name="password_valid">The Password field must be at least 6 characters in length.</string>
    <string name="txt_location">Search Location</string>
    <string name="txt_loc">LOC</string>
    <string name="txt_Tag_Child">Tag Child</string>
    <string name="txt_Tagged_List">Tagged List</string>
    <string name="txt_Like_List">Likes</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_follow">Follow</string>
    <string name="txt_unfollow">Unfollow</string>
    <string name="no_child_checked_in">No child checked-in this room.</string>
    <string name="no_child_checked_in_any_room">No child is checked-in in any room.</string>
    <!-- messages -->
    <string name="str_Message">Message</string>
    <string name="medication_update">Medication event updated successfully.</string>
    <string name="medication_added">Medication event added successfully.</string>
   
    <string name="str_alert">Alert</string>
    <string name="exit_app_message">Are you sure, you want to exit this app.</string>
    <string name="str_shift_not">Shift not available.</string>
    <string name="str_no_record">No record found.</string>
    <string name="str_no_post">No posts are available.</string>
    <string name="str_no_more_post">No more posts are available.</string>
    <string name="str_no_post_health">Currently no post available for health. Please post on the timeline.</string>

</resources>