<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White" >

    <RelativeLayout
        android:id="@+id/Header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/Dark_White" >

        <ImageButton
            android:id="@+id/Invite_Back_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hello"
            android:paddingBottom="@dimen/font_padding_10"
            android:paddingLeft="@dimen/font_padding_10"
            android:paddingRight="@dimen/font_padding_15"
            android:paddingTop="@dimen/font_padding_10"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/Invite_Title_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="Arial"
            android:text="@string/txt_invite"
            android:textColor="@color/Gray_Dark"
            android:textSize="@dimen/font_size_18"
            android:textStyle="normal" />
    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@+id/Header_layout"
        android:background="@color/light_gray" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/Top_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/Invite_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="Arial"
                android:gravity="left"
                android:padding="@dimen/font_padding_10"
                android:text="@string/txt_invite_caps"
                android:textColor="@color/list_item_drak_gray_address"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/Invite_Txt"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/Layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_line_1"
                android:orientation="horizontal"
                android:padding="@dimen/font_margin_5" >

                <TextView
                    android:id="@+id/Invite_FName_Txt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/font_margin_5"
                    android:fontFamily="Arial"
                    android:gravity="left"
                    android:text="@string/txt_first_name"
                    android:textColor="@color/list_item_drak_gray_address"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/Invite_FName_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginLeft="@dimen/font_margin_20"
                    android:layout_marginRight="@dimen/font_margin_5"
                    android:background="@drawable/round_bg_input"
                    android:ems="10"
                    android:fontFamily="Airal"
                    android:inputType="textPersonName|textCapSentences"
                    android:paddingLeft="@dimen/font_padding_5"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Layout_1"
                android:orientation="horizontal"
                android:padding="@dimen/font_margin_5" >

                <TextView
                    android:id="@+id/Invite_LNameTxt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/font_margin_5"
                    android:fontFamily="Arial"
                    android:gravity="left"
                    android:text="@string/txt_last_name"
                    android:textColor="@color/list_item_drak_gray_address"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/Invite_LName_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginLeft="@dimen/font_margin_20"
                    android:layout_marginRight="@dimen/font_margin_5"
                    android:background="@drawable/round_bg_input"
                    android:ems="10"
                    android:fontFamily="Airal"
                    android:inputType="textPersonName|textCapSentences"
                    android:paddingLeft="@dimen/font_padding_5"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Layout_2"
                android:orientation="horizontal"
                android:padding="@dimen/font_margin_5" >

                <TextView
                    android:id="@+id/Invite_Email_Txt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/font_margin_5"
                    android:fontFamily="Arial"
                    android:gravity="left"
                    android:text="@string/txt_email"
                    android:textColor="@color/list_item_drak_gray_address"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/Invite_Email_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginLeft="@dimen/font_margin_20"
                    android:layout_marginRight="@dimen/font_margin_5"
                    android:background="@drawable/round_bg_input"
                    android:ems="10"
                    android:fontFamily="Airal"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/font_padding_5"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Layout_3"
                android:orientation="horizontal"
                android:padding="@dimen/font_margin_5" >

                <TextView
                    android:id="@+id/Invite_Relationship_Txt"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/font_margin_5"
                    android:fontFamily="Arial"
                    android:gravity="left"
                    android:text="@string/txt_relationship"
                    android:textColor="@color/list_item_drak_gray_address"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="normal" />

                <Button
                    android:id="@+id/Invite_Relationship_Btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginLeft="@dimen/font_margin_20"
                    android:layout_marginRight="@dimen/font_margin_5"
                    android:background="@drawable/round_bg_input"
                    android:ems="10"
                    android:fontFamily="Airal"
                    android:text="Select"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/font_padding_5"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/Invite_Submit_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/Layout_4"
                android:layout_marginLeft="@dimen/font_margin_20"
                android:layout_marginRight="@dimen/font_margin_20"
                android:layout_marginTop="@dimen/font_margin_20"
                android:background="@color/Green_Light"
                android:fontFamily="Airal"
                android:padding="@dimen/font_padding_8"
                android:text="@string/txt_Submit"
                android:textColor="@color/White"
                android:textSize="@dimen/font_size_18"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_line_6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/font_margin_10"
                android:layout_below="@+id/Invite_Submit_Btn" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/Invite_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparent_gray_70"
        android:clickable="true"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/Bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/weel_layout_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/White" >

            <RelativeLayout
                android:id="@+id/lay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/Header_Color" >

                <Button
                    android:id="@+id/AddPopupCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@android:color/transparent"
                    android:fontFamily="Arial"
                    android:padding="@dimen/font_padding_5"
                    android:text="@string/txt_Cancel"
                    android:textColor="@color/green_color"
                    android:textSize="@dimen/font_size_18" />

                <Button
                    android:id="@+id/AddPopupDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:fontFamily="Arial"
                    android:padding="@dimen/font_padding_5"
                    android:text="@string/txt_Done"
                    android:textColor="@color/green_color"
                    android:textSize="@dimen/font_size_18" />
            </RelativeLayout>

            <kankan.wheel.widget.WheelView
                android:id="@+id/wheel_medication"
                android:layout_width="@dimen/popup_width"
                android:layout_height="@dimen/popup_button_width"
                android:layout_below="@+id/lay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/font_margin_40" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>