<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White" >

    <RelativeLayout
        android:id="@+id/Header_Layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/Header_Color" >

        <TextView
            android:id="@+id/Login_Title_Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="Arial"
            android:text="@string/txt_login"
            android:textColor="@color/Gray_Dark"
            android:textSize="@dimen/font_size_18"
            android:textStyle="normal" />
    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/Header_Layout"
        android:background="@color/light_gray" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line" >

        <RelativeLayout
            android:id="@+id/Top_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/font_margin_10"
            android:paddingLeft="@dimen/font_margin_10"
            android:paddingRight="@dimen/font_margin_10" >

            <ImageView
                android:id="@+id/Login_Logo_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/font_margin_20"
                android:contentDescription="@string/hello"
                android:src="@drawable/splash" />

            <RelativeLayout
                android:id="@+id/Middle_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_Logo_Img"
                android:layout_marginLeft="@dimen/font_margin_10"
                android:layout_marginRight="@dimen/font_margin_10"
                android:background="@drawable/rounded_corner_bg_white"
                android:padding="2dp" >

                <EditText
                    android:id="@+id/Login_Email_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/popup_button_height"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/Login_CroseEmail_Btn"
                    android:background="@color/White"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/txt_Email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/border_color"
                    android:textSize="@dimen/font_size_14" />

                <ImageButton
                    android:id="@+id/Login_CroseEmail_Btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/font_margin_8"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/hello"
                    android:src="@drawable/btn_close"
                    android:visibility="gone" />

                <View
                    android:id="@+id/view_line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignLeft="@+id/Login_Email_Edt"
                    android:layout_below="@+id/Login_Email_Edt"
                    android:background="@color/border_color" />

                <EditText
                    android:id="@+id/Login_Password_Edt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/popup_button_height"
                    android:layout_alignLeft="@+id/Login_Email_Edt"
                    android:layout_alignRight="@+id/Login_Email_Edt"
                    android:layout_below="@+id/view_line1"
                    android:background="@color/White"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/txt_Password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/border_color"
                    android:textSize="@dimen/font_size_14" />
            </RelativeLayout>

            <Button
                android:id="@+id/Login_Btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/popup_button_height"
                android:layout_alignLeft="@+id/Middle_Layout"
                android:layout_alignRight="@+id/Middle_Layout"
                android:layout_below="@+id/Middle_Layout"
                android:layout_marginTop="@dimen/font_margin_10"
                android:background="@drawable/button_login_selector"
                android:fontFamily="Arial"
                android:text="@string/txt_login"
                android:textColor="@color/White"
                android:textSize="@dimen/font_size_18"
                android:textStyle="normal" />

            <RelativeLayout
                android:id="@+id/Bottom_Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_Btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/font_margin_10" >

                <CheckBox
                    android:id="@+id/Login_Checks_Img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/check_selector"
                    android:contentDescription="@string/hello" />

                <TextView
                    android:id="@+id/Login_Checks_Txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/font_margin_5"
                    android:layout_toRightOf="@+id/Login_Checks_Img"
                    android:fontFamily="Arial"
                    android:text="@string/txt_Remember_Email"
                    android:textColor="@color/Green_Light"
                    android:textSize="@dimen/font_size_16"
                    android:textStyle="normal" />
            </RelativeLayout>

            <Button
                android:id="@+id/Login_ChangedPassword_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Bottom_Layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/font_margin_10"
                android:background="@android:color/transparent"
                android:text="Forgot Password ?"
                android:textColor="@color/Green_Light"
                android:textSize="@dimen/font_size_16"
                android:textStyle="normal" />

            <View
                android:id="@+id/view_Changed"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/Login_ChangedPassword_Btn"
                android:layout_alignRight="@+id/Login_ChangedPassword_Btn"
                android:layout_below="@+id/Login_ChangedPassword_Btn"
                android:layout_centerHorizontal="true"
                android:background="@color/Green_Light" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>